--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,8 +4,6 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  schedule:
-  - cron: '30 5 * * *'  # Runs daily at 5:30 AM UTC (11:00 AM IST)
 jobs:
   test:
     timeout-minutes: 60
@@ -19,8 +17,8 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run a specific test spec with Chromium  
-      run: npx playwright test 01_Register_User.spec.js --project=chromium 
+    - name: Run Playwright tests
+      run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
