--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.52.0",
-    "@types/node": "^22.13.4"
+    "@cucumber/cucumber": "^11.3.0",
+    "@playwright/test": "^1.53.0",
+    "@types/node": "^22.13.4",
+    "playwright-bdd": "^8.3.0"
+  },
+  "dependencies": {
+    "playwright": "^1.53.0"
   }
 }
