--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "playwright_auto_vs",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@cucumber/cucumber": "^11.3.0",
-    "@playwright/test": "^1.53.0",
-    "@types/node": "^22.13.4",
-    "playwright-bdd": "^8.3.0"
-  },
-  "dependencies": {
-    "playwright": "^1.53.0"
-  }
+    "name": "hellocucumber",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "cucumber-js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@cucumber/cucumber": "^11.3.0"
+    }
 }
