--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@cucumber/cucumber": "^11.3.0"
+        "@cucumber/cucumber": "^11.3.0",
+        "@playwright/test": "^1.53.0",
+        "@types/node": "^22.15.21"
+    },
+    "dependencies": {
+        "fs": "^0.0.1-security",
+        "xlsx": "^0.18.5"
     }
 }
